# Physical-Activity-Classification

./: .gitignore  README.md
ahu/: CMakeLists.txt  prj.conf
ahu/src/: main.c
bsu/: CMakeLists.txt  make
bsu/src/: main.c
dv/: 0_data_logger.py  1_clean_consolidate.py  _PROCESSED.csv  clean_consolidate.py  data_logger.py  data_training.py  raw_data.txt  tago_comms.py
dv/data/: jogging_1(Strip_first_5s).txt  jogging_1.csv  jogging_2(Strip_first_5s).txt  jogging_2.csv  jogging_3(Strip_first_5s).txt  jogging_3.csv  running_1.csv  running_2.csv  running_3.csv  sitting_1.csv  sitting_1.txt  sitting_2.csv  sitting_2.txt  sitting_3.csv  sitting_3.txt  sprint_1_stripped.txt  sprint_2_stripped.txt  sprint_3_stripped.txt  standing_1.csv  standing_1.txt  standing_2.csv  standing_2.txt  standing_3.csv  standing_3.txt  walking_fast_1.csv  walking_fast_1.txt  walking_fast_2.csv  walking_fast_2.txt  walking_fast_3.csv  walking_fast_3.txt  walking_normal_1.csv  walking_normal_1.txt  walking_normal_2.csv  walking_normal_2.txt  walking_normal_3.csv  walking_normal_3.txt  walking_slow_1 (bad).txt  walking_slow_1.csv  walking_slow_1.txt  walking_slow_2.csv  (+3 more)
dv/otherData/: training_data_p3b.csv
dv/testData/: x0-y0.5.csv  x0-y1.5.csv  x0-y1.csv  x0-y2.5.csv  x0-y2.csv  x0-y3.5.csv  x0-y3.csv  x0-y4.csv  x0.5-y0.5.csv  x0.5-y0.csv  x0.5-y1.5.csv  x0.5-y1.csv  x0.5-y2.5.csv  x0.5-y2.csv  x0.5-y3.5.csv  x0.5-y3.csv  x0.5-y4.csv  x1-y0.5.csv  x1-y0.csv  x1-y1.5.csv  x1-y1.csv  x1-y2.5.csv  x1-y2.csv  x1-y3.5.csv  x1-y3.csv  x1-y4.csv  x1.5-y0.5.csv  x1.5-y0.csv  (+43 more)
mpu6050/: prj.conf
(+31 files in other folders)
